@@ -3,6 +3,8 @@ CHANGES-1.1.txt
 
 CHANGES IN CUPS V1.1.16
 
+	- The USB backend now reports both the ulpt and unlpt
+	  devices under *BSD.
 	- The "lpstat -o" command would truncate the
 	  "printer-jobid" string if it was longer than 21
 	  characters.
